--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>
-        Casper
+        Casper Purtlebaugh
     </title>
 
     <!-- Bootstrap Core CSS -->
@@ -23,6 +23,12 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+    <!-- Dev icons -->
+     <link rel="stylesheet" href="devicon.css">
+
+  <!--  if you want colored versions -->
+  <link rel="stylesheet" href="devicon-colors.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,7 +49,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-anchor"></i>  <span class="light">Casper</span> Purtlebaugh
+                    <i class="fa fa-anchor"></i>  <span class="light">C.</span> Purtlebaugh
                 </a>
             </div>
 
@@ -58,7 +64,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Projects</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#skills">Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -91,52 +100,91 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <h2>About Casper</h2>
+                <p></p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
         </div>
     </section>
+    <!-- end about section -->
 
-    <!-- Download Section -->
+    <!-- Project section-->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Projects</h2>
+
                 </div>
             </div>
         </div>
     </section>
+    <!-- end project section -->
+
+    <!-- skills section -->
+    <section id="skills" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Skills</h2>
+                <ul class="list-inline banner-social-buttons">
+                    <div class="row list-inline banner-social-buttons">
+                        <li><img class="devicon-angularjs-plain" src="img/angularjs-plain.svg" style="width:60px;height:60px; color:#42DCA3"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/bootstrap-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/css3-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/html5-plain.svg" style="width:60px;height:60px"></li>
+                    </div>
+
+                    <div class="row list-inline banner-social-buttons">
+                        <li><img class="devicon-angularjs-plain" src="img/javascript-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/mongodb-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/nodejs-original.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/grunt-original.svg" style="width:60px;height:60px"></li>
+                    </div>
+
+                    <div class="row list-inline banner-social-buttons">
+                        <li><img class="devicon-angularjs-plain" src="img/bower-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/github-original.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/heroku-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/sass-original.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-angularjs-plain" src="img/travis-plain-wordmark.svg" style="width:60px;height:60px"></li>
+                    </div>
+
+                </ul>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- end skills section -->
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
+                <h2>Contact</h2>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="mailto:cassie.purtlebaugh@gmai.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://twitter.com/baughleonmusic" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://github.com/cpurtlebaugh" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/cassiepurtlebaugh" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </section>
+    <!-- end contact section -->
 
     <!-- Map Section -->
     <div id="map"></div>
+    <!-- end map section -->
 
     <!-- Footer -->
     <footer>
@@ -156,7 +204,6 @@
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-    <script type="text/javascript" src="https://api.instagram.com/oembed?url=http://instagr.am/p/fA9uwTtkSN/"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
