changed fill color of all svgs to same as social media buttons

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Dev icons -->
-     <link rel="stylesheet" href="devicon.css">
-
-  <!--  if you want colored versions -->
-  <link rel="stylesheet" href="devicon-colors.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -129,25 +126,25 @@
                 <h2>Skills</h2>
                 <ul class="list-inline banner-social-buttons">
                     <div class="row list-inline banner-social-buttons">
-                        <li><img class="devicon-angularjs-plain" src="img/angularjs-plain.svg" style="width:60px;height:60px; color:#42DCA3"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/bootstrap-plain.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/css3-plain.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/html5-plain.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon" src="img/angularjs-plain.svg"></li>
+                        <li><img class="devicon" src="img/bootstrap-plain.svg"></li>
+                        <li><img class="devicon" src="img/css3-plain.svg"></li>
+                        <li><img class="devicon" src="img/html5-plain.svg"></li>
                     </div>
 
                     <div class="row list-inline banner-social-buttons">
-                        <li><img class="devicon-angularjs-plain" src="img/javascript-plain.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/mongodb-plain.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/nodejs-original.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/grunt-original.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon" src="img/javascript-plain.svg"></li>
+                        <li><img class="devicon" src="img/mongodb-plain.svg"></li>
+                        <li><img class="devicon" src="img/nodejs-original.svg"></li>
+                        <li><img class="devicon" src="img/grunt-line.svg"></li>
                     </div>
 
                     <div class="row list-inline banner-social-buttons">
-                        <li><img class="devicon-angularjs-plain" src="img/bower-plain.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/github-original.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/heroku-plain.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/sass-original.svg" style="width:60px;height:60px"></li>
-                        <li><img class="devicon-angularjs-plain" src="img/travis-plain-wordmark.svg" style="width:60px;height:60px"></li>
+                        <li><img class="devicon-plain" src="img/bower-plain.svg"></li>
+                        <li><img class="devicon-plain" src="img/github-original.svg"></li>
+                        <li><img class="devicon-plain" src="img/heroku-plain.svg"></li>
+                        <li><img class="devicon-plain" src="img/sass-original.svg"></li>
+                        <li><img class="devicon-plain" src="img/travis-plain-wordmark.svg"></li>
                     </div>
 
                 </ul>
