update css and rm map from index

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Bonjour,</h1>
-                        <p class="brand-heading">Monde</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <h2 class="brand-heading">Monde</h2>
+                        <a href="#about" class="btn btn-circle h2age-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -130,21 +130,18 @@
                         <li><img class="devicon" src="img/bootstrap-plain.svg"></li>
                         <li><img class="devicon" src="img/css3-plain.svg"></li>
                         <li><img class="devicon" src="img/html5-plain.svg"></li>
-                    </div>
-
-                    <div class="row list-inline banner-social-buttons">
                         <li><img class="devicon" src="img/javascript-plain.svg"></li>
                         <li><img class="devicon" src="img/mongodb-plain.svg"></li>
-                        <li><img class="devicon" src="img/nodejs-original.svg"></li>
-                        <li><img class="devicon" src="img/grunt-line.svg"></li>
                     </div>
 
                     <div class="row list-inline banner-social-buttons">
-                        <li><img class="devicon-plain" src="img/bower-plain.svg"></li>
-                        <li><img class="devicon-plain" src="img/github-original.svg"></li>
-                        <li><img class="devicon-plain" src="img/heroku-plain.svg"></li>
-                        <li><img class="devicon-plain" src="img/sass-original.svg"></li>
-                        <li><img class="devicon-plain" src="img/travis-plain-wordmark.svg"></li>
+                        <li><img class="devicon" src="img/nodejs-original.svg"></li>
+                        <li><img class="devicon" src="img/grunt-line.svg"></li>
+                        <li><img class="devicon" src="img/bower-plain.svg"></li>
+                        <li><img class="devicon" src="img/github-original.svg"></li>
+                        <li><img class="devicon" src="img/heroku-plain.svg"></li>
+                        <li><img class="devicon" src="img/sass-original.svg"></li>
+                        <li><img class="devicon" src="img/travis-plain-wordmark.svg"></li>
                     </div>
 
                 </ul>
@@ -179,9 +176,6 @@
     </section>
     <!-- end contact section -->
 
-    <!-- Map Section -->
-    <div id="map"></div>
-    <!-- end map section -->
 
     <!-- Footer -->
     <footer>
@@ -199,8 +193,6 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
