modified devicons to flip and increased padding

--- a/index.html
+++ b/index.html
@@ -121,34 +121,160 @@
 
     <!-- skills section -->
     <section id="skills" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Skills</h2>
-                <ul class="list-inline banner-social-buttons">
-                    <div class="row list-inline banner-social-buttons">
-                        <li><img class="devicon" src="img/angularjs-plain.svg"></li>
-                        <li><img class="devicon" src="img/bootstrap-plain.svg"></li>
-                        <li><img class="devicon" src="img/css3-plain.svg"></li>
-                        <li><img class="devicon" src="img/html5-plain.svg"></li>
-                        <li><img class="devicon" src="img/javascript-plain.svg"></li>
-                        <li><img class="devicon" src="img/mongodb-plain.svg"></li>
-                    </div>
+        <div class="col-lg-12">
+            <h2>Skills</h2>
+            <ul class="list-inline banner-social-buttons">
+                <div class="row list-inline banner-social-buttons">
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                              <div class="front face">
+                                <img class="devicon" src="img/angularjs-plain.svg"/>
+                              </div>
+                              <div class="back face center">
+                                <p>angular.js</p>
+                              </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                              <div class="front face">
+                                <img class="devicon" src="img/bootstrap-plain.svg">
+                              </div>
+                              <div class="back face center">
+                                <p>bootstrap</p>
+                              </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                        <div id="f1_card" class="shadow">
+                          <div class="front face">
+                           <img class="devicon" src="img/css3-plain.svg">
+                          </div>
+                          <div class="back face center">
+                            <p>CSS3</p>
+                          </div>
+                        </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                        <div id="f1_card" class="shadow">
+                          <div class="front face">
+                            <img class="devicon" src="img/html5-plain.svg">
+                          </div>
+                          <div class="back face center">
+                            <p>HTML5</p>
+                          </div>
+                        </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                        <div id="f1_card" class="shadow">
+                          <div class="front face">
+                            <img class="devicon" src="img/javascript-plain.svg">
+                          </div>
+                          <div class="back face center">
+                            <p>javascript</p>
+                          </div>
+                        </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                        <div id="f1_card" class="shadow">
+                          <div class="front face">
+                            <img class="devicon" src="img/mongodb-plain.svg">
+                          </div>
+                          <div class="back face center">
+                            <p>mongodb</p>
+                          </div>
+                        </div>
+                        </div>
+                    </li>
+                </div>
 
-                    <div class="row list-inline banner-social-buttons">
-                        <li><img class="devicon" src="img/nodejs-original.svg"></li>
-                        <li><img class="devicon" src="img/grunt-line.svg"></li>
-                        <li><img class="devicon" src="img/bower-plain.svg"></li>
-                        <li><img class="devicon" src="img/github-original.svg"></li>
-                        <li><img class="devicon" src="img/heroku-plain.svg"></li>
-                        <li><img class="devicon" src="img/sass-original.svg"></li>
-                        <li><img class="devicon" src="img/travis-plain-wordmark.svg"></li>
-                    </div>
-
-                </ul>
-            </div>
-
+                <div class="row list-inline banner-social-buttons">
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                              <div class="front face">
+                                <img class="devicon" src="img/nodejs-original.svg">
+                              </div>
+                              <div class="back face center">
+                                <p>node.js</p>
+                              </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                              <div class="front face">
+                                <img class="devicon" src="img/grunt-line.svg">
+                              </div>
+                              <div class="back face center">
+                                <p>grunt</p>
+                              </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                                <div class="front face">
+                                    <img class="devicon" src="img/bower-plain.svg">
+                                </div>
+                                <div class="back face center">
+                                    <p>bower</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                                <div class="front face">
+                                    <img class="devicon" src="img/github-original.svg">
+                                </div>
+                                <div class="back face center">
+                                    <p>github</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                                <div class="front face">
+                                    <img class="devicon" src="img/heroku-plain.svg">
+                                </div>
+                                <div class="back face center">
+                                    <p>heroku</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div id="f1_container">
+                            <div id="f1_card" class="shadow">
+                                <div class="front face">
+                                    <img class="devicon" src="img/sass-original.svg">
+                                </div>
+                                <div class="back face center">
+                                    <p>sass</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </div>
+            </ul>
         </div>
-
     </section>
     <!-- end skills section -->
 
