--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Projects</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#skills">Skills</a>
@@ -107,8 +107,8 @@
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
+    <section id="projects" class="content-section text-center">
+        <div class="project-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projects</h2>
@@ -318,7 +318,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
-
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
