small test to check push

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -301,7 +300,7 @@
         </div>
     </section>
     <!-- end contact section -->
-
+ <!-- <test> -->
 
     <!-- Footer -->
     <footer>
@@ -321,7 +320,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
-
 </body>
 
 </html>
