--- a/index.html
+++ b/index.html
@@ -96,10 +96,17 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Casper</h2>
+                <h2>About</h2>
                 <p></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I front post-hxc band <a href="http://www.boigirlofficial.com/#/">boigirl</a>, create solo pop music as <a href="http://www.baughleon.com">baughleon</a>, and occasionally contribute concert reviews to <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh">verbicide</a>.</p>
+
+                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. My Philosophy degree and IT experience have honed my ability to identify and break down problems while being an artist allows me to approach solutions creatively. </p>
+
+                <p>My goal is to work with passionate, driven people so we can positively impact the world together. I'm currently searching for a fulltime developer role in the area of entertainment, media, or marketing. </p>
+
+
+
+
             </div>
         </div>
     </section>
@@ -284,7 +291,7 @@
                 <h2>Contact</h2>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="mailto:cassie.purtlebaugh@gmai.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="mailto:cassie.purtlebaugh@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
                         <a href="https://twitter.com/baughleonmusic" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
