--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
     <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
 
+    <!-- carousel css -->
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
+
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
+
+
     <!-- Dev icons -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"> -->
+    <!-- slick carousel -->
+
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -104,22 +112,23 @@
 
                 <p>My goal is to work with passionate, driven people so we can positively impact the world together. I'm currently searching for a fulltime developer role in the area of entertainment, media, or marketing. </p>
 
-
-
-
             </div>
         </div>
     </section>
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="projects" class="content-section text-center">
-        <div class="project-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Projects</h2>
-
-                </div>
+    <section id="projects" class="project-section text-center">
+        <div class="row">
+            <div class="col-lg-12">
+            <h2>Projects</h2>
+                 <div class="lazy center-block">
+                     <div><img src="img/angularjs-plain.svg" alt=""></div>
+                     <div><img src="img/css3-plain.svg" alt=""></div>
+                     <div><img src="img/html5-plain.svg" alt=""></div>
+                     <div><img src="img/mongodb-plain.svg" alt=""></div>
+                     <div><img src="img/travis-plain.svg" alt=""></div>
+                 </div>
             </div>
         </div>
     </section>
@@ -327,6 +336,17 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
+
+    <!-- slick carousel  -->
+    <script type="text/javascript" src="js/slick.js"></script>
+
+    <script type="text/javascript">
+        $('.lazy').slick({
+          lazyLoad: 'ondemand',
+          slidesToShow: 3,
+          slidesToScroll: 1
+        });
+    </script>
 </body>
 
 </html>
