--- a/index.html
+++ b/index.html
@@ -120,14 +120,21 @@
     <!-- Project section-->
     <section id="projects" class="project-section text-center">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
-                 <div class="lazy center-block">
-                     <div><img src="img/angularjs-plain.svg" alt=""></div>
-                     <div><img src="img/css3-plain.svg" alt=""></div>
-                     <div><img src="img/html5-plain.svg" alt=""></div>
-                     <div><img src="img/mongodb-plain.svg" alt=""></div>
-                     <div><img src="img/travis-plain.svg" alt=""></div>
+                 <div class="single-item center-block">
+                     <div><img src="img/castifi-home.png" alt="">
+                        <p>Castifi</p>
+                     </div>
+                     <div><img src="img/basic-submission-page.png" alt="">
+                        <p>Boigirl</p>
+                     </div>
+                     <div><img src="img/castifi-about.png" alt="">
+                        <p>Baughleon</p>
+                     </div>
+                     <div><img src="img/castifi-initial-page.png" alt="">
+                        <p>Music Twin</p>
+                     </div>
                  </div>
             </div>
         </div>
@@ -341,11 +348,7 @@
     <script type="text/javascript" src="js/slick.js"></script>
 
     <script type="text/javascript">
-        $('.lazy').slick({
-          lazyLoad: 'ondemand',
-          slidesToShow: 3,
-          slidesToScroll: 1
-        });
+        $('.single-item').slick();
     </script>
 </body>
 
