change arrows to font awesome in carousel

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- carousel css -->
     <link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -123,17 +124,30 @@
             <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
                  <div class="single-item center-block">
-                     <div><img src="img/castifi-home.png" alt="">
+                     <div>
+                        <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
+                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                        <img src="img/castifi-home.png">
+                        <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
+                     </div>
+
+                     <div>
+                        <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
+                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                        <img src="img/basic-submission-page.png">
+                        <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
+                     </div>
+
+                     <div>
+                        <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
+                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                        <img src="img/castifi-about.png">
+                        <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
+                     </div>
+
+                     <div>
+                        <img src="img/castifi-initial-page.png">
                         <p>Castifi</p>
-                     </div>
-                     <div><img src="img/basic-submission-page.png" alt="">
-                        <p>Boigirl</p>
-                     </div>
-                     <div><img src="img/castifi-about.png" alt="">
-                        <p>Baughleon</p>
-                     </div>
-                     <div><img src="img/castifi-initial-page.png" alt="">
-                        <p>Music Twin</p>
                      </div>
                  </div>
             </div>
