fix styling for page scroll and respective containers,  adjust carousel text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container about-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
@@ -119,33 +119,33 @@
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="projects" class="project-section text-center">
+    <section id="projects" class="container project-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
                  <div class="single-item center-block">
-                     <div>
-                        <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
+                     <div class="carousel-image">
+                        <p class="project-text"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
                         <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/castifi-home.png">
                         <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
                      </div>
 
-                     <div>
+                     <div class="carousel-image">
                         <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
                         <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/basic-submission-page.png">
                         <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
                      </div>
 
-                     <div>
+                     <div class="carousel-image">
                         <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
                         <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/castifi-about.png">
                         <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
                      </div>
 
-                     <div>
+                     <div class="carousel-image">
                         <img src="img/castifi-initial-page.png">
                         <p>Castifi</p>
                      </div>
@@ -156,7 +156,7 @@
     <!-- end project section -->
 
     <!-- skills section -->
-    <section id="skills" class="container content-section text-center">
+    <section id="skills" class="container skills-section text-center">
         <div class="col-lg-12">
             <h2>Skills</h2>
             <ul class="list-inline banner-social-buttons">
