--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container about-section text-center">
+    <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
@@ -119,7 +119,7 @@
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="projects" class="container project-section text-center">
+    <section id="projects" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
@@ -156,7 +156,7 @@
     <!-- end project section -->
 
     <!-- skills section -->
-    <section id="skills" class="container skills-section text-center">
+    <section id="skills" class="container content-section text-center">
         <div class="col-lg-12">
             <h2>Skills</h2>
             <ul class="list-inline banner-social-buttons">
