--- a/index.html
+++ b/index.html
@@ -119,37 +119,41 @@
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="projects" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-            <h2>Projects</h2>
-                 <div class="single-item center-block">
+    <section id="projects" class="content-section text-center">
+        <div class="projects-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                <h2>Projects</h2>
+                <div class="single-item center-block">
                      <div class="carousel-image">
-                        <p class="project-text"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
                         <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/castifi-home.png">
-                        <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
+                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
                      </div>
 
                      <div class="carousel-image">
-                        <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
+                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
                         <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/basic-submission-page.png">
-                        <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
+                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
                      </div>
 
                      <div class="carousel-image">
-                        <p class="project-text"><a href="www.castifi.com">Castifi</a></p>
+                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
                         <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/castifi-about.png">
-                        <p class="project-text">Technologies: <i>Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</i></p>
+                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
                      </div>
 
                      <div class="carousel-image">
+                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
                         <img src="img/castifi-initial-page.png">
-                        <p>Castifi</p>
+                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
                      </div>
-                 </div>
+                </div>
+                </div>
             </div>
         </div>
     </section>
