--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section about-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
@@ -119,43 +119,43 @@
     <!-- end about section -->
 
     <!-- Project section-->
-    <section id="projects" class="content-section text-center">
-        <div class="projects-section">
+    <section id="projects" class="projects-section text-center">
+        <!-- <div class="projects-section"> -->
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                 <h2>Projects</h2>
-                <div class="single-item center-block">
-                     <div class="carousel-image">
-                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                        <img src="img/castifi-home.png">
-                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                     </div>
+                    <div class="single-item center-block">
+                         <div class="carousel-image">
+                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                            <img src="img/castifi-home.png">
+                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
+                         </div>
 
-                     <div class="carousel-image">
-                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                        <img src="img/basic-submission-page.png">
-                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                     </div>
+                         <div class="carousel-image">
+                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                            <img src="img/basic-submission-page.png">
+                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
+                         </div>
 
-                     <div class="carousel-image">
-                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                        <img src="img/castifi-about.png">
-                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                     </div>
+                         <div class="carousel-image">
+                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                            <img src="img/castifi-about.png">
+                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
+                         </div>
 
-                     <div class="carousel-image">
-                        <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                        <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                        <img src="img/castifi-initial-page.png">
-                        <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                     </div>
-                </div>
+                         <div class="carousel-image">
+                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                            <img src="img/castifi-initial-page.png">
+                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
+                         </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
     </section>
     <!-- end project section -->
 
