test another project section alternative, increase margin-botton for 2nd devicons row

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p></p>
-                <p>I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I front post-hxc band <a href="http://www.boigirlofficial.com/#/">boigirl</a>, create solo pop music as <a href="http://www.baughleon.com">baughleon</a>, and occasionally contribute concert reviews to <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh">verbicide</a>.</p>
+                <p>I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I front a post-hxc band <a href="http://www.boigirlofficial.com/#/">boigirl</a>, create pop music as <a href="http://www.baughleon.com">baughleon</a>, and occasionally contribute concert reviews to <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh">verbicide</a>.</p>
 
                 <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. My Philosophy degree and IT experience have honed my ability to identify and break down problems while being an artist allows me to approach solutions creatively. </p>
 
@@ -119,43 +119,18 @@
     <!-- end about section -->
 
     <!-- Project section-->
+
     <section id="projects" class="projects-section text-center">
-        <!-- <div class="projects-section"> -->
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                <h2>Projects</h2>
-                    <div class="single-item center-block">
-                         <div class="carousel-image">
-                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                            <img src="img/castifi-home.png">
-                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                         </div>
-
-                         <div class="carousel-image">
-                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                            <img src="img/basic-submission-page.png">
-                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                         </div>
-
-                         <div class="carousel-image">
-                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                            <img src="img/castifi-about.png">
-                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                         </div>
-
-                         <div class="carousel-image">
-                            <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
-                            <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
-                            <img src="img/castifi-initial-page.png">
-                            <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
-                         </div>
-                    </div>
-                </div>
+<!--         <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
+            <h2>Projects</h2>
+            <div id="cf2" class="shadow">
+              <img class="bottom" src="/img/castifi-about.png"/>
+              <img class="top" src="/img/grunt-line.svg"/>
             </div>
-        <!-- </div> -->
+            <p id="cf_onclick">Click me to toggle</p>
+            </div>
+        </div> -->
     </section>
     <!-- end project section -->
 
@@ -239,7 +214,7 @@
                     </li>
                 </div>
 
-                <div class="row list-inline banner-social-buttons">
+                <div class="row list-inline banner-social-buttons bottom-row">
                     <li>
                         <div id="f1_container">
                             <div id="f1_card" class="shadow">
@@ -345,9 +320,9 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
+<!--         <div class="container text-center">
             <p>Copyright &copy; Casper 2016</p>
-        </div>
+        </div> -->
     </footer>
 
     <!-- jQuery -->
