changed project back to og state for now

--- a/index.html
+++ b/index.html
@@ -121,16 +121,39 @@
     <!-- Project section-->
 
     <section id="projects" class="projects-section text-center">
-<!--         <div class="container">
+        <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
             <h2>Projects</h2>
-            <div id="cf2" class="shadow">
-              <img class="bottom" src="/img/castifi-about.png"/>
-              <img class="top" src="/img/grunt-line.svg"/>
+            <div class="single-item center-block">
+                <div class="carousel-image">
+                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                    <img src="img/castifi-home.png">
+                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
+                </div>
+
+                <div class="carousel-image">
+                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                    <img src="img/basic-submission-page.png">
+                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai.</p>
+                </div>
+
+                <div class="carousel-image">
+                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                    <img src="img/castifi-about.png">
+                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai. </p>
+                </div>
+
+                <div class="carousel-image">
+                    <p class="project-title"><i class="fa fa-desktop"></i><a href="http://www.castifi.com">Castifi</a></p>
+                    <p class="project-text">A platform aimed at digitizing casting for background actors.</p>
+                    <img src="img/castifi-initial-page.png">
+                    <p class="tech-text">Technologies: Angular.js, Node.js, MongoDB, Express, Bootstrap, CSS, Heroku, TravisCI, Mongolab, Grunt, Bower, & TDD with Mocha/Chai. </p>
+                </div>
             </div>
-            <p id="cf_onclick">Click me to toggle</p>
-            </div>
-        </div> -->
+        </div>
     </section>
     <!-- end project section -->
 
@@ -316,13 +339,11 @@
         </div>
     </section>
     <!-- end contact section -->
- <!-- <test> -->
+
 
     <!-- Footer -->
     <footer>
-<!--         <div class="container text-center">
-            <p>Copyright &copy; Casper 2016</p>
-        </div> -->
+
     </footer>
 
     <!-- jQuery -->
